syntax = "proto3";

option csharp_namespace = "Notification";

service NotificationService {
  rpc SendNotification (NotificationRequest) returns (NotificationResponse);
}

message NotificationRequest {
  string userId = 1;
  string message = 2;
  string type = 3; // email, sms...
}

message NotificationResponse {
  string status = 1;
}
